Attempt to add GUI